--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,19 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/app.py", "use": "@vercel/python" }
+      {
+        "src": "api/app.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "api/app.py" },
-      { "src": "/(.*)", "dest": "index.html" }
+      {
+        "src": "/api/(.*)",
+        "dest": "api/app.py"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "index.html"
+      }
     ]
   }
-  
