--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "builds": [
       {
         "src": "api/app.py",
-        "use": "@vercel/python"
+        "use": "@vercel/python",
+        "config": {
+          "runtime": "python3.9"
+        }
       }
     ],
     "routes": [
@@ -15,5 +18,8 @@
         "src": "/(.*)",
         "dest": "index.html"
       }
-    ]
+    ],
+    "env": {
+      "PYTHONPATH": "."
+    }
   }
