--- a/vercel.json
+++ b/vercel.json
@@ -2,24 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/app.py",
-        "use": "@vercel/python",
-        "config": {
-          "runtime": "python3.9"
-        }
+        "src": "app.py",
+        "use": "@vercel/python"
       }
     ],
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "api/app.py"
-      },
-      {
         "src": "/(.*)",
-        "dest": "index.html"
+        "dest": "app.py"
       }
-    ],
-    "env": {
-      "PYTHONPATH": "."
-    }
+    ]
   }
+  
